--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -18,7 +18,9 @@
     "loginBtn": "Войти",
     "noAccount": "Нет аккаунта?",
     "signupLink": "Зарегистрироваться",
-    "error": "Неверное имя пользователя или пароль! Попробуйте снова."
+    "error": "Неверное имя пользователя или пароль! Попробуйте снова.",
+    "usernameError": "Максимум 30 символов для почты",
+    "passwordError": "Пароль должен быть не менее 4 символов"
   },
   "Layout": {
     "1": "Exclusive",
@@ -154,7 +156,14 @@
     "8": "Создать аккаунт",
     "9": "Зарегистрироваться через Google",
     "10": "Уже есть аккаунт?",
-    "11": "Войти"
+    "11": "Войти",
+    "errors": {
+      "name": "Имя обязательно",
+      "phone": "Телефон должен содержать только цифры",
+      "email": "Введите корректный email (до 30 символов)",
+      "password": "Пароль должен быть не менее 4 символов",
+      "confirmPassword": "Пароли не совпадают"
+    }
   },
 
   "About": {
