--- a/public/locales/tj/translation.json
+++ b/public/locales/tj/translation.json
@@ -18,7 +18,9 @@
     "loginBtn": "Даромадан",
     "noAccount": "Ҳисоб надоред?",
     "signupLink": "Бақайдгирӣ",
-    "error": "Номи корбар ё рамз нодуруст аст! Лутфан боз кӯшиш кунед."
+    "error": "Номи корбар ё рамз нодуруст аст! Лутфан боз кӯшиш кунед.",
+    "usernameError": "Максимум 30 аломат барои почта",
+    "passwordError": "Рамз бояд ҳадди ақал 4 аломат бошад"
   },
 
   "Layout": {
@@ -156,7 +158,14 @@
     "8": "Эҷоди ҳисоб",
     "9": "Бақайдгирӣ бо Google",
     "10": "Аллакай ҳисоб доред?",
-    "11": "Даромадан"
+    "11": "Даромадан",
+    "errors": {
+      "name": "Ном ҳатмӣ аст",
+      "phone": "Телефон бояд танҳо рақам бошад",
+      "email": "Email-и дурустро ворид кунед (на бештар аз 30 аломат)",
+      "password": "Рамз бояд ҳадди ақал 4 аломат бошад",
+      "confirmPassword": "Рамзҳо мувофиқ нестанд"
+    }
   },
 
   "About": {
