--- a/public/locales/tj/translation.json
+++ b/public/locales/tj/translation.json
@@ -199,7 +199,7 @@
     "myOrders": "Фармоишҳои ман",
     "twoFactor": "Аутентификатсияи дуқадам",
     "devices": "Дастгоҳҳо",
-    "logout": "Баромадан",
+    "logout": "Рӯйхати хоҳишҳо",
     "profilePhoto": "Акс профил",
     "firstName": "Ном",
     "lastName": "Насаб",
