updated style of home

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,10 @@
 {
+  "general": {
+    "1": "Loading...",
+    "2": "Failed to load data. Check your internet connection.",
+    "3": "Try again"
+  },
+  
   "Home": {
     "1": "Languages",
     "2": "Translate",
