--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,10 @@
 {
+  "general": {
+    "1": "Загрузка...",
+    "2": "Ошибка загрузки данных. Проверьте интернет.",
+    "3": "Повторить попытку"
+  },
+  
   "Home": {
     "1": "Язык",
     "2": "Translate",
