--- a/public/locales/tj/translation.json
+++ b/public/locales/tj/translation.json
@@ -1,4 +1,10 @@
 {
+  "general": {
+    "1": "Боргирӣ...",
+    "2": "Хатогӣ дар гирифтани маълумот. Интернетро санҷед.",
+    "3": "Кӯшиши дубора"
+  },
+
   "Home": {
     "1": "Забон",
     "2": "Translate",
